test(exp-mk3): prove memory isolation and retention
Add deterministic retention checks, concurrent and reentrant execution coverage, current-item restoration tests, and production JOL layout measurements.

Closes #145